--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3f51b5</color>
+    <color name="colorPrimary">#000</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="whitish">#F8F8FF</color>#FAEBD7
+    <color name="colorAccent">#303F9F</color>
+    <color name="whitish">#FFFFF0</color>
     <color name="navbar">#F5F5F5</color>
+    <color name="backgr">#F0FFF0</color>
 </resources>
