--- a/app/src/main/res/layout/activity_add_personal.xml
+++ b/app/src/main/res/layout/activity_add_personal.xml
@@ -8,29 +8,95 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="508dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="3dp">
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/textView6"
+            android:layout_alignStart="@+id/textView6"
+            android:layout_below="@+id/persTotal"
+            android:layout_marginTop="22dp"
+            android:text="Валюта: "
+            android:textSize="24sp" />
+
+        <EditText
+            android:id="@+id/persTotal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textView6"
+            android:layout_alignBottom="@+id/textView6"
+            android:layout_alignLeft="@+id/personalSpinner"
+            android:layout_alignStart="@+id/personalSpinner"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/textView5"
+            android:layout_alignStart="@+id/textView5"
+            android:layout_below="@+id/myPlus"
+            android:layout_marginTop="32dp"
+            android:text="Сумма:"
+            android:textSize="24sp" />
+
+        <RadioButton
+            android:id="@+id/myMinus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/textView5"
+            android:layout_marginLeft="43dp"
+            android:layout_marginStart="43dp"
+            android:layout_toEndOf="@+id/textView"
+            android:layout_toRightOf="@+id/textView"
+            android:text="Должен я" />
+
+        <RadioButton
+            android:id="@+id/myPlus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/myMinus"
+            android:layout_alignStart="@+id/myMinus"
+            android:layout_below="@+id/myMinus"
+            android:text="Должны мне" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/textView"
+            android:layout_alignStart="@+id/textView"
+            android:layout_below="@+id/textView"
+            android:layout_marginTop="58dp"
+            android:text="Долг:"
+            android:textSize="24sp" />
 
         <Button
             android:id="@+id/add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/spinner"
             android:layout_alignParentBottom="true"
-            android:layout_alignRight="@+id/spinner"
-            android:layout_marginBottom="19dp"
+            android:layout_marginBottom="17dp"
+            android:layout_toEndOf="@+id/myMinus"
+            android:layout_toRightOf="@+id/myMinus"
             android:text="Создать"
             tools:layout_editor_absoluteX="247dp"
             tools:layout_editor_absoluteY="428dp" />
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/personalSpinner"
             android:layout_width="232dp"
             android:layout_height="28dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:layout_marginEnd="18dp"
-            android:layout_marginRight="18dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
             android:layout_marginTop="30dp"
             app:layout_constraintStart_toStartOf="parent"
             tools:layout_editor_absoluteY="41dp" />
@@ -39,15 +105,25 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignTop="@+id/spinner"
-            android:layout_marginLeft="42dp"
-            android:layout_marginStart="42dp"
+            android:layout_alignTop="@+id/personalSpinner"
+            android:layout_marginEnd="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_toLeftOf="@+id/personalSpinner"
+            android:layout_toStartOf="@+id/personalSpinner"
             android:text="С кем:"
             android:textSize="24sp"
             tools:layout_editor_absoluteX="25dp"
             tools:layout_editor_absoluteY="37dp" />
+
+        <Spinner
+            android:id="@+id/spinnerCurrency"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/textView7"
+            android:layout_marginLeft="13dp"
+            android:layout_marginStart="13dp"
+            android:layout_toEndOf="@+id/textView7"
+            android:layout_toRightOf="@+id/textView7" />
 
     </RelativeLayout>
 
