--- a/app/src/main/res/layout/activity_add_profile.xml
+++ b/app/src/main/res/layout/activity_add_profile.xml
@@ -35,14 +35,15 @@
             tools:layout_editor_absoluteX="50dp"
             tools:layout_editor_absoluteY="57dp" />
 
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/editUserName"
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/imageView"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            app:civ_border_width="2dp"
+            app:civ_border_color="@color/circleBorder"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            android:layout_centerVertical="true"/>
 
         <Button
             android:id="@+id/add"
