--- a/app/src/main/res/layout/activity_add_profile.xml
+++ b/app/src/main/res/layout/activity_add_profile.xml
@@ -35,15 +35,15 @@
             tools:layout_editor_absoluteX="50dp"
             tools:layout_editor_absoluteY="57dp" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/imageView"
             android:layout_width="96dp"
             android:layout_height="96dp"
-            app:civ_border_width="2dp"
-            app:civ_border_color="@color/circleBorder"
+            android:background="@drawable/blank_profile"
             android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+            app:civ_border_color="@color/circleBorder"
+            app:civ_border_width="2dp" />
 
         <Button
             android:id="@+id/add"
