--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -159,27 +159,26 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/myProfilePicButton"
                 android:layout_marginBottom="22dp"
-                android:layout_marginLeft="83dp"
-                android:layout_marginStart="83dp"
+                android:layout_marginLeft="80dp"
+                android:layout_marginStart="80dp"
                 android:layout_toEndOf="@+id/myProfilePicButton"
                 android:layout_toRightOf="@+id/myProfilePicButton"
-                android:text="TextView"
+                android:text="@string/title_activity_myprofile"
                 android:textSize="24sp" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/myProfilePicButton"
                 android:layout_width="96dp"
                 android:layout_height="96dp"
-                app:civ_border_width="2dp"
-                app:civ_border_color="@color/circleBorder"
+                android:background="@drawable/blank_profile"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="39dp"
                 android:layout_marginStart="39dp"
                 android:layout_marginTop="95dp"
-                app:srcCompat="@mipmap/ic_launcher_round" />
+                app:civ_border_color="@color/circleBorder"
+                app:civ_border_width="2dp" />
         </RelativeLayout>
 
     </ViewFlipper>
