--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,8 @@
 
     <include
         layout="@layout/content_main"
-        android:layout_width="385dp"
-        android:layout_height="565dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         tools:layout_editor_absoluteX="-10dp" />
 
     <android.support.design.widget.BottomNavigationView
