--- a/app/src/main/res/layout/activity_add_personal.xml
+++ b/app/src/main/res/layout/activity_add_personal.xml
@@ -10,18 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="508dp"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="3dp">
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView6"
-            android:layout_alignStart="@+id/textView6"
-            android:layout_below="@+id/persTotal"
-            android:layout_marginTop="22dp"
-            android:text="Валюта: "
-            android:textSize="24sp" />
+        tools:layout_editor_absoluteY="1dp">
 
         <EditText
             android:id="@+id/persTotal"
@@ -29,61 +18,74 @@
             android:layout_height="wrap_content"
             android:layout_alignBaseline="@+id/textView6"
             android:layout_alignBottom="@+id/textView6"
-            android:layout_alignLeft="@+id/personalSpinner"
-            android:layout_alignStart="@+id/personalSpinner"
+            android:layout_alignEnd="@+id/personalSpinner"
+            android:layout_alignRight="@+id/personalSpinner"
             android:ems="10"
             android:inputType="textPersonName" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/spinnerCurrency"
+            android:layout_alignLeft="@+id/textView5"
+            android:layout_alignStart="@+id/textView5"
+            android:text="Валюта:"
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView5"
-            android:layout_alignStart="@+id/textView5"
-            android:layout_below="@+id/myPlus"
-            android:layout_marginTop="32dp"
+            android:layout_alignLeft="@+id/textView"
+            android:layout_alignStart="@+id/textView"
+            android:layout_below="@+id/textView"
+            android:layout_marginTop="37dp"
             android:text="Сумма:"
             android:textSize="24sp" />
-
-        <RadioButton
-            android:id="@+id/myMinus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/textView5"
-            android:layout_marginLeft="43dp"
-            android:layout_marginStart="43dp"
-            android:layout_toEndOf="@+id/textView"
-            android:layout_toRightOf="@+id/textView"
-            android:text="Должен я" />
-
-        <RadioButton
-            android:id="@+id/myPlus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/myMinus"
-            android:layout_alignStart="@+id/myMinus"
-            android:layout_below="@+id/myMinus"
-            android:text="Должны мне" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView"
-            android:layout_alignStart="@+id/textView"
-            android:layout_below="@+id/textView"
-            android:layout_marginTop="58dp"
+            android:layout_alignLeft="@+id/textView6"
+            android:layout_alignStart="@+id/textView6"
+            android:layout_below="@+id/persTotal"
+            android:layout_marginTop="73dp"
             android:text="Долг:"
             android:textSize="24sp" />
+
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/textView"
+            android:layout_toRightOf="@+id/textView"
+            android:layout_alignTop="@+id/textView5"
+            android:id="@+id/radioGroup2">
+
+        <RadioButton
+            android:id="@+id/myPlus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Должны мне" />
+
+            <RadioButton
+                android:id="@+id/myMinus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Должен я" />
+        </RadioGroup>
 
         <Button
             android:id="@+id/add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/personalSpinner"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="17dp"
-            android:layout_toEndOf="@+id/myMinus"
-            android:layout_toRightOf="@+id/myMinus"
+            android:layout_alignRight="@+id/personalSpinner"
+            android:layout_marginBottom="19dp"
             android:text="Создать"
             tools:layout_editor_absoluteX="247dp"
             tools:layout_editor_absoluteY="428dp" />
@@ -119,11 +121,11 @@
             android:id="@+id/spinnerCurrency"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/textView7"
-            android:layout_marginLeft="13dp"
-            android:layout_marginStart="13dp"
-            android:layout_toEndOf="@+id/textView7"
-            android:layout_toRightOf="@+id/textView7" />
+            android:layout_below="@+id/radioGroup2"
+            android:layout_marginTop="29dp"
+            android:layout_toEndOf="@+id/textView"
+            android:layout_toRightOf="@+id/textView"
+            android:paddingTop="5dp" />
 
     </RelativeLayout>
 
