--- a/app/src/main/res/layout/item_personal.xml
+++ b/app/src/main/res/layout/item_personal.xml
@@ -5,17 +5,16 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/ivImagePersonal"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        app:civ_border_width="2dp"
-        app:civ_border_color="@color/circleBorder"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:civ_border_color="@color/circleBorder"
+        app:civ_border_width="2dp"
+        android:background="@drawable/blank_profile" />
 
     <TextView
         android:id="@+id/tvTextPersonal"
@@ -27,22 +26,22 @@
         android:layout_toEndOf="@+id/ivImagePersonal"
         android:layout_toRightOf="@+id/ivImagePersonal"
         android:text="UserName"
-        android:textSize="30sp" />
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/tvTotalPersonal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/tvTextPersonal"
-        android:layout_alignBottom="@+id/tvTextPersonal"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginEnd="23dp"
-        android:layout_marginRight="23dp"
-        android:paddingTop="10dp"
-        android:text="Total"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="29dp"
+        android:layout_marginRight="29dp"
+        android:fontFamily="g"
+        android:paddingTop="0dp"
+        android:text="-р."
         android:textAlignment="center"
         android:textColor="@android:color/holo_green_dark"
-        android:textSize="30sp" />
+        android:textSize="24sp" />
 </RelativeLayout>
 
