--- a/app/src/main/res/layout/item_profile.xml
+++ b/app/src/main/res/layout/item_profile.xml
@@ -4,17 +4,16 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/ivImageProfile"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        app:civ_border_width="2dp"
-        app:civ_border_color="@color/circleBorder"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:civ_border_color="@color/circleBorder"
+        app:civ_border_width="2dp"
+        android:background="@drawable/blank_profile" />
 
     <TextView
         android:id="@+id/tvTextProfile"
