--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#000</color>
+    <color name="colorPrimary">#2E2E2E</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#303F9F</color>
     <color name="whitish">#FFFFF0</color>
     <color name="navbar">#F5F5F5</color>
-    <color name="backgr">#F0FFF0</color>
+    <color name="backgr">#DCDCDC</color>
     <color name="circleBorder">#F5F5F5</color>
+    <color name="plusBalance">#269926</color>
+    <color name="minusBalance">#000</color>
 </resources>
