--- a/app/src/main/res/layout/activity_add_personal.xml
+++ b/app/src/main/res/layout/activity_add_personal.xml
@@ -7,10 +7,15 @@
     tools:context="com.example.www.goldmineproject.AddPersonalActivity">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="508dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="1dp">
+        android:id="@+id/relativeLayout3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="1dp"
+        android:layout_marginTop="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <EditText
             android:id="@+id/persTotal"
@@ -21,7 +26,7 @@
             android:layout_alignEnd="@+id/personalSpinner"
             android:layout_alignRight="@+id/personalSpinner"
             android:ems="10"
-            android:inputType="textPersonName" />
+            android:inputType="number" />
 
         <TextView
             android:id="@+id/textView7"
@@ -56,19 +61,19 @@
             android:textSize="24sp" />
 
         <RadioGroup
+            android:id="@+id/radioGroup2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/textView"
-            android:layout_toRightOf="@+id/textView"
             android:layout_alignTop="@+id/textView5"
-            android:id="@+id/radioGroup2">
+            android:layout_toEndOf="@+id/textView"
+            android:layout_toRightOf="@+id/textView">
 
-        <RadioButton
-            android:id="@+id/myPlus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Должны мне" />
+            <RadioButton
+                android:id="@+id/myPlus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Должны мне" />
 
             <RadioButton
                 android:id="@+id/myMinus"
@@ -127,6 +132,27 @@
             android:layout_toRightOf="@+id/textView"
             android:paddingTop="5dp" />
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/textView7"
+            android:layout_alignStart="@+id/textView7"
+            android:layout_below="@+id/textView7"
+            android:layout_marginTop="26dp"
+            android:text="Комментарий:"
+            android:textSize="24sp" />
+
+        <EditText
+            android:id="@+id/persComment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView2"
+            android:layout_marginTop="12dp"
+            android:layout_toLeftOf="@+id/add"
+            android:layout_toStartOf="@+id/add"
+            android:ems="10"
+            android:inputType="textPersonName" />
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
