--- a/app/src/main/res/layout/activity_edit_group.xml
+++ b/app/src/main/res/layout/activity_edit_group.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.www.goldmineproject.AddGroupActivity">
+    tools:context="com.example.www.goldmineproject.EditGroupActivity">
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
@@ -14,16 +14,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-        <ListView
-            android:id="@+id/usersSelected"
-            android:layout_width="368dp"
-            android:layout_height="162dp"
-            android:layout_above="@+id/add"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="11dp"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="214dp" />
 
         <TextView
             android:id="@+id/textView4"
@@ -36,41 +26,19 @@
             android:textSize="24sp" />
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/imageView"
+            android:id="@+id/imageViewEdit"
             android:layout_width="96dp"
             android:layout_height="96dp"
-            android:layout_above="@+id/textView"
+            android:layout_below="@+id/editGroupNameEdit"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="11dp"
             android:background="@drawable/blank_profile"
             app:civ_border_color="@color/circleBorder"
             app:civ_border_width="2dp" />
 
-        <Spinner
-            android:id="@+id/groupParticSpinner"
-            android:layout_width="232dp"
-            android:layout_height="28dp"
-            android:layout_alignBottom="@+id/textView"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="41dp" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/usersSelected"
-            android:layout_marginBottom="14dp"
-            android:layout_toLeftOf="@+id/imageView"
-            android:layout_toStartOf="@+id/imageView"
-            android:text="Добавить:"
-            android:textSize="24sp"
-            tools:layout_editor_absoluteX="25dp"
-            tools:layout_editor_absoluteY="37dp" />
 
         <EditText
-            android:id="@+id/editGroupName"
+            android:id="@+id/editGroupNameEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -82,16 +50,16 @@
             android:textSize="24sp" />
 
         <Button
-            android:id="@+id/add"
+            android:id="@+id/editButtonGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/usersSelected"
+            android:layout_alignEnd="@+id/imageViewEdit"
             android:layout_alignParentBottom="true"
-            android:layout_alignRight="@+id/usersSelected"
+            android:layout_alignRight="@+id/imageViewEdit"
             android:layout_marginBottom="12dp"
             android:layout_marginEnd="11dp"
             android:layout_marginRight="11dp"
-            android:text="Создать"
+            android:text="Изменить"
             tools:layout_editor_absoluteX="247dp"
             tools:layout_editor_absoluteY="428dp" />
 
