--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -22,7 +22,7 @@
             android:textSize="30sp" />
 
         <EditText
-            android:id="@+id/editUserName"
+            android:id="@+id/editUserNameEdit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView3"
@@ -36,7 +36,7 @@
             tools:layout_editor_absoluteY="57dp" />
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/imageView"
+            android:id="@+id/imageViewEditProfile"
             android:layout_width="96dp"
             android:layout_height="96dp"
             android:background="@drawable/blank_profile"
@@ -46,7 +46,7 @@
             app:civ_border_width="2dp" />
 
         <Button
-            android:id="@+id/add"
+            android:id="@+id/editProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -55,7 +55,7 @@
             android:layout_marginBottom="23dp"
             android:layout_marginEnd="14dp"
             android:layout_marginRight="14dp"
-            android:text="Создать"
+            android:text="Изменить"
             tools:layout_editor_absoluteX="247dp"
             tools:layout_editor_absoluteY="428dp" />
     </RelativeLayout>
