--- a/app/src/main/res/layout/activity_add_personal_op.xml
+++ b/app/src/main/res/layout/activity_add_personal_op.xml
@@ -31,7 +31,9 @@
             android:layout_marginEnd="21dp"
             android:layout_marginRight="21dp"
             android:ems="10"
-            android:inputType="number" />
+            android:digits="0123456789."
+            android:inputType="numberDecimal"
+            android:maxLength="7"/>
 
         <TextView
             android:id="@+id/textView7"
