--- a/app/src/main/res/layout/item_group_op.xml
+++ b/app/src/main/res/layout/item_group_op.xml
@@ -28,16 +28,19 @@
         android:text="Target"
         android:textSize="18sp"/>
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_below="@id/tvOpSource"
         android:id="@+id/tvOpGroupComment"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="25dp"
         android:layout_marginRight="25dp"
+        android:layout_toLeftOf="@+id/tvOpGroupValue"
+        android:layout_toStartOf="@+id/tvOpGroupValue"
         android:text="Comment"
-        android:textSize="18sp"
+        android:textSize="16sp"
         />
     <TextView
         android:layout_width="wrap_content"
